# Langchain_tutorials

./: .gitignore  01-chat_models.ipynb  02-messages.ipynb  03-prompt_template.ipynb  README.md  pyproject.toml
01_Fundamental_concepts/: 01-chat_models.ipynb  02-messages.ipynb  03-prompt_template.ipynb  04-LLMs.ipynb  04-example_selectors.ipynb  05-LLMs.ipynb  05-output_parsers.ipynb  06-document_loaders.ipynb  06-output_parsers.ipynb  07-document_loaders.ipynb  08_tesxt_splitters.ipynb
02_advanced_topics/: 01_HF_models.py
assets/: lepetitprince.txt
