[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "A bunch of LangChain tutorials to discover langchain features"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain[anthropic]>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "langchain-ollama>=0.3.7",
    "langchain-google-datastore>=0.3.1",
    "langchain-google-memorystore-redis>=0.3.0",
    "langchain-chroma>=0.2.2",
    "pypdf>=6.0.0",
    "langchain-unstructured>=0.1.6",
    "matplotlib>=3.10.6",
    "pymupdf>=1.26.4",
    "pillow>=11.3.0",
]
